fix(layout)!: fix overflow

--- a/styles/components/layout.module.css
+++ b/styles/components/layout.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
+    max-width: 100vw;
     background-color: #f5f5f5;
 }
 
